--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -132,8 +132,8 @@
                     android:layout_marginStart="@dimen/dimen_10"
                     app:highlightTrackColor="@color/colorPrimary"
                     app:highlightTrackWidth="@dimen/dimen_2"
-                    app:maxValue="65"
-                    app:minValue="18"
+                    app:maxValue="90"
+                    app:minValue="12"
                     app:normalTrackColor="@color/colorHintText"
                     app:normalTrackWidth="@dimen/dimen_2"
                     app:stiffness="300"
@@ -198,7 +198,7 @@
                         android:fontFamily="@font/avenir_black"
                         android:textStyle="normal"
                         android:layout_gravity="center"
-                        android:text="@string/cm"
+                        android:text="@string/feets"
                         android:textColor="@color/colorPrimaryDark"
                         android:textSize="@dimen/font_11sp" />
 
@@ -235,8 +235,8 @@
                     android:layout_marginStart="@dimen/dimen_10"
                     app:highlightTrackColor="@color/colorPrimary"
                     app:highlightTrackWidth="@dimen/dimen_2"
-                    app:maxValue="150"
-                    app:minValue="50"
+                    app:maxValue="10"
+                    app:minValue="1"
                     app:normalTrackColor="@color/colorHintText"
                     app:normalTrackWidth="@dimen/dimen_2"
                     app:stiffness="300"
@@ -340,7 +340,7 @@
                     android:layout_marginStart="@dimen/dimen_10"
                     app:highlightTrackColor="@color/colorPrimary"
                     app:highlightTrackWidth="@dimen/dimen_2"
-                    app:maxValue="200"
+                    app:maxValue="300"
                     app:minValue="30"
                     app:normalTrackColor="@color/colorHintText"
                     app:normalTrackWidth="@dimen/dimen_2"
