--- a/app/src/main/res/layout/fragment_diet.xml
+++ b/app/src/main/res/layout/fragment_diet.xml
@@ -527,43 +527,44 @@
                          android:layout_height="wrap_content"
                          app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
+                     <LinearLayout
+                         android:layout_width="match_parent"
+                         android:layout_height="wrap_content"
+                         android:id="@+id/lnrEdit"
+                         android:paddingTop="@dimen/margin_8dp"
+                         android:paddingStart="@dimen/margin_16dp"
+                         android:paddingEnd="@dimen/margin_16dp"
+                         android:paddingBottom="@dimen/margin_16dp"
+                         android:gravity="center"
+                         android:visibility="visible"
+                         android:orientation="horizontal">
+
+                         <TextView
+                             android:id="@+id/btnEditDietPlan"
+                             android:layout_width="match_parent"
+                             android:layout_height="wrap_content"
+                             android:background="@drawable/btn_edit_diet"
+                             android:fontFamily="@font/avenir_roman"
+                             android:text="@string/edit_diet_plan"
+                             android:visibility="gone"
+                             android:gravity="center"
+                             android:paddingTop="@dimen/dimen_10"
+                             android:paddingBottom="@dimen/dimen_10"
+                             android:textColor="@color/colorPrimary"
+                             android:textSize="14sp"
+                             android:textAllCaps="false">
+                         </TextView>
+
+
+                     </LinearLayout>
+
+
+
                  </LinearLayout>
 
              </LinearLayout>
          </androidx.core.widget.NestedScrollView>
 
-
-         <LinearLayout
-             android:layout_alignParentBottom="true"
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content"
-             android:id="@+id/lnrEdit"
-             android:paddingTop="@dimen/margin_8dp"
-             android:paddingStart="@dimen/margin_16dp"
-             android:paddingEnd="@dimen/margin_16dp"
-             android:paddingBottom="@dimen/margin_16dp"
-             android:gravity="center"
-             android:visibility="visible"
-             android:orientation="horizontal">
-
-             <TextView
-                 android:id="@+id/btnEditDietPlan"
-                 android:layout_width="match_parent"
-                 android:layout_height="wrap_content"
-                 android:background="@drawable/btn_edit_diet"
-                 android:fontFamily="@font/avenir_roman"
-                 android:text="@string/edit_diet_plan"
-                 android:visibility="gone"
-                 android:gravity="center"
-                 android:paddingTop="@dimen/margin_16dp"
-                 android:paddingBottom="@dimen/margin_16dp"
-                 android:textColor="@color/colorPrimary"
-                 android:textSize="14sp"
-                 android:textAllCaps="false">
-             </TextView>
-
-
-         </LinearLayout>
 
 
      </RelativeLayout>
