--- a/app/src/main/res/layout/fragment_workout.xml
+++ b/app/src/main/res/layout/fragment_workout.xml
@@ -577,43 +577,45 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"/>
 
-                </LinearLayout>
+              <LinearLayout
+                  android:layout_alignParentBottom="true"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:id="@+id/lnrEdit"
+                  android:paddingTop="@dimen/margin_8dp"
+                  android:paddingStart="@dimen/margin_16dp"
+                  android:paddingEnd="@dimen/margin_16dp"
+                  android:paddingBottom="@dimen/margin_16dp"
+                  android:gravity="center"
+                  android:visibility="gone"
+                  android:orientation="horizontal">
+
+                  <TextView
+                      android:id="@+id/btnEditWorkoutPlan"
+                      android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:background="@drawable/btn_edit_diet"
+                      android:fontFamily="@font/avenir_roman"
+                      android:text="@string/edit_workout_plan"
+                      android:gravity="center"
+                      android:paddingTop="@dimen/dimen_10"
+                      android:paddingBottom="@dimen/dimen_10"
+                      android:textColor="@color/colorPrimary"
+                      android:textSize="14sp"
+                      android:textAllCaps="false">
+                  </TextView>
+
+
+              </LinearLayout>
+
+
+          </LinearLayout>
 
 
         </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
 
-     <LinearLayout
-            android:layout_alignParentBottom="true"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/lnrEdit"
-             android:paddingTop="@dimen/margin_8dp"
-            android:paddingStart="@dimen/margin_16dp"
-            android:paddingEnd="@dimen/margin_16dp"
-            android:paddingBottom="@dimen/margin_16dp"
-            android:gravity="center"
-            android:visibility="gone"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/btnEditWorkoutPlan"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/btn_edit_diet"
-                android:fontFamily="@font/avenir_roman"
-                android:text="@string/edit_workout_plan"
-                android:gravity="center"
-                android:paddingTop="@dimen/margin_16dp"
-                android:paddingBottom="@dimen/margin_16dp"
-                android:textColor="@color/colorPrimary"
-                android:textSize="14sp"
-                android:textAllCaps="false">
-            </TextView>
-
-
-        </LinearLayout>
 
     </RelativeLayout>
 
