--- a/app/src/main/res/layout/row_home_diet_plan.xml
+++ b/app/src/main/res/layout/row_home_diet_plan.xml
@@ -2,19 +2,18 @@
 <LinearLayout android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginStart="@dimen/margin_16dp"
-    android:layout_marginEnd="@dimen/margin_16dp"
-    android:layout_marginTop="@dimen/margin_12dp"
+    android:layout_marginStart="@dimen/dimen_12"
+    android:layout_marginEnd="@dimen/dimen_12"
+    android:layout_marginTop="@dimen/margin_8dp"
     android:layout_marginBottom="@dimen/margin_4dp"
-    android:padding="@dimen/dimen_7"
-    android:elevation="@dimen/dimen_1"
     android:orientation="vertical"
-    android:background="@drawable/meal_type_rect_bg"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:padding="@dimen/dimen_5"
+        android:background="@drawable/meal_type_rect_bg"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
