--- a/app/src/main/res/layout/fragment_diet.xml
+++ b/app/src/main/res/layout/fragment_diet.xml
@@ -17,7 +17,6 @@
          tools:context=".dashboard.homeDietPlan.DietFragment">
 
          <androidx.core.widget.NestedScrollView
-             android:layout_above="@+id/lnrEdit"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
 
@@ -84,7 +83,7 @@
 
 
                              <ImageView
-                                 android:id="@+id/ivMenu"
+                                 android:id="@+id/ivSelectDietDate"
                                  android:layout_width="@dimen/dimen_50"
                                  android:layout_height="@dimen/dimen_50"
                                  android:padding="@dimen/dimen_10"
