--- a/app/src/main/res/layout/fragment_workout.xml
+++ b/app/src/main/res/layout/fragment_workout.xml
@@ -19,7 +19,6 @@
 
 
     <androidx.core.widget.NestedScrollView
-        android:layout_above="@+id/lnrEdit"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -86,7 +85,7 @@
 
 
                             <ImageView
-                                android:id="@+id/ivMenu"
+                                android:id="@+id/ivSelectDate"
                                 android:layout_width="@dimen/dimen_50"
                                 android:layout_height="@dimen/dimen_50"
                                 android:padding="@dimen/dimen_10"
