--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -63,7 +63,7 @@
                         android:layout_marginTop="@dimen/dimen_12"
                         android:layout_width="@dimen/dimen_30"
                         android:layout_height="@dimen/dimen_30"
-                        android:src="@drawable/user" />
+                        android:src="@drawable/female" />
 
                 </LinearLayout>
             </RelativeLayout>
