--- a/app/src/main/res/layout/activity_my_profile.xml
+++ b/app/src/main/res/layout/activity_my_profile.xml
@@ -41,7 +41,7 @@
                     android:layout_width="@dimen/dimen_100"
                     android:layout_height="@dimen/dimen_100"
                     android:layout_centerInParent="true"
-                    android:src="@drawable/user"/>
+                    android:src="@drawable/female"/>
 
                 <ImageView
                     android:id="@+id/ivCamera"
