--- a/app/src/main/res/layout/dialog_no_internet.xml
+++ b/app/src/main/res/layout/dialog_no_internet.xml
@@ -23,35 +23,45 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <ImageView
+            <ImageView
                     android:layout_width="@dimen/dimen_30"
                     android:layout_height="@dimen/dimen_30"
                     android:padding="@dimen/dimen_5"
                     android:layout_alignParentEnd="true"
                     android:id="@+id/ivClose"
                     android:layout_margin="@dimen/dimen_10"/>
-                <LinearLayout
+
+            <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:gravity="center"
-                    android:layout_margin="@dimen/dimen_20">
+                    android:layout_margin="@dimen/dimen_10">
 
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                <com.airbnb.lottie.LottieAnimationView
+                    android:id="@+id/animation_view"
+                    android:layout_width="@dimen/dimen_120"
+                    android:layout_height="@dimen/dimen_120"
+                    app:lottie_fileName="no_internet.json"
+                    app:lottie_repeatCount="1"
+                    app:lottie_speed="2"
+                    app:lottie_autoPlay="true" />
 
                     <TextView
+                        android:text="@string/noConnection"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="@dimen/font_18sp"
+                        android:fontFamily="@font/avenir_black"
                         android:textColor="@color/colorPrimary"
                         />
 
                     <TextView
+                        android:text="@string/turnOnInternet"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="@dimen/font_12sp"
+                        android:fontFamily="@font/avenir_light"
                         android:textAlignment="center"
                         android:layout_marginTop="@dimen/dimen_5"
                         android:layout_marginBottom="@dimen/dimen_5"
