--- a/app/src/main/res/layout/dialog_progress.xml
+++ b/app/src/main/res/layout/dialog_progress.xml
@@ -15,11 +15,19 @@
         android:orientation="vertical"
         android:padding="5dp">
 
-        <ImageView
+       <!-- <ProgressBar
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:id="@+id/iv_loader"
-            android:src="@drawable/loader_hr"/>
+            android:id="@+id/iv_loader"/>
+
+-->
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/animation_view"
+            android:layout_width="@dimen/dimen_110"
+            android:layout_height="@dimen/dimen_110"
+            app:lottie_fileName="loader.json"
+            app:lottie_loop="true"
+            app:lottie_autoPlay="true" />
 
 
     </RelativeLayout>
