--- a/app/src/main/res/layout/drawer_menu.xml
+++ b/app/src/main/res/layout/drawer_menu.xml
@@ -27,7 +27,7 @@
                 android:layout_height="@dimen/dimen_50"
                 android:padding="@dimen/dimen_10"
                 android:layout_gravity="center_vertical"
-                android:src="@drawable/diva_place_holder" />
+                android:src="@drawable/female" />
 
             <LinearLayout
                 android:orientation="vertical"
