--- a/app/src/main/res/layout/row_packges.xml
+++ b/app/src/main/res/layout/row_packges.xml
@@ -79,7 +79,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                forPackageSessionMonth="@{packagesModel.tenureName}"
+                sessionPrice="@{packagesModel.description}"
                 android:paddingTop="@dimen/dimen_5"
                 android:layout_gravity="center"
                 android:textAlignment="center"
