--- a/app/src/main/res/layout/row_diet_plan.xml
+++ b/app/src/main/res/layout/row_diet_plan.xml
@@ -50,6 +50,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text=""
+                    android:visibility="gone"
                     android:textSize="@dimen/font_12sp"
                     android:textColor="@color/colorHeadingText"
                     android:fontFamily="@font/avenir_light" />
@@ -89,7 +90,7 @@
 
                 <LinearLayout
                         android:id="@+id/llQuantity"
-                        android:visibility="gone"
+                        android:visibility="visible"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
@@ -97,16 +98,24 @@
                           <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                              android:padding="@dimen/dimen_2"
                             android:background="@drawable/add_diet_plan_rect"
                             android:gravity="center_vertical"
                             android:orientation="horizontal">
 
-                          <ImageView
-                                android:id="@+id/ivSubtract"
-                                android:layout_width="30dp"
-                                android:layout_height="30dp"
-                                android:padding="4dp"
-                                android:src="@drawable/ic_minus_black_24dp" />
+                          <EditText
+                              android:id="@+id/etValue"
+                              android:layout_width="@dimen/dimen_50"
+                              android:layout_height="30dp"
+                              android:padding="4dp"
+                              android:textSize="@dimen/font_14sp"
+                              android:inputType="number"
+                              android:imeOptions="actionDone"
+                              android:fontFamily="@font/avenir_roman"
+                              android:text="1"
+                              android:gravity="center"
+                              android:textColor="@color/colorPrimaryDark"
+                              android:background="@android:color/transparent" />
 
                           <View
                             android:background="@color/gray3"
@@ -114,32 +123,18 @@
                             android:layout_height="@dimen/dimen_30"/>
 
                           <TextView
-                                android:id="@+id/tvNumberOfItems"
+                                android:id="@+id/tvUnits"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:background="@color/white"
-                                android:fontFamily="@font/avenir_black"
-                                android:inputType="number"
+                                android:fontFamily="@font/avenir_light"
                                 android:paddingStart="10dp"
                                 android:paddingTop="5dp"
                                 android:paddingEnd="10dp"
                                 android:paddingBottom="5dp"
-                                android:text="1"
-                                android:textColor="@color/black"
+                                android:text="grams"
+                                android:textColor="@color/colorTextLightDark"
                                 android:textSize="13sp" />
-
-                            <View
-                                android:background="@color/black"
-                                android:layout_width="@dimen/dimen_0.1"
-                                android:layout_height="@dimen/dimen_30"/>
-
-
-                            <ImageView
-                                android:id="@+id/ivAdd"
-                                android:layout_width="30dp"
-                                android:layout_height="30dp"
-                                android:padding="4dp"
-                                android:src="@drawable/ic_add_black_24dp" />
 
                         </LinearLayout>
 
