--- a/app/src/main/res/layout/drawer_menu.xml
+++ b/app/src/main/res/layout/drawer_menu.xml
@@ -144,6 +144,119 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/llMySubscription"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="@dimen/dimen_20"
+                        android:layout_height="@dimen/dimen_20"
+                        android:layout_gravity="center_vertical"
+                        android:src="@drawable/subscription" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:orientation="vertical"
+                        android:paddingStart="10dp"
+                        android:paddingTop="10dp">
+
+                        <TextView
+                            android:layout_gravity="start"
+                            android:fontFamily="@font/avenir_light"
+                            android:text="@string/my_subscription"
+                            android:textAlignment="viewStart"
+                            style="@style/MenuText"/>
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="0.5dp"
+                            android:layout_marginTop="15dp"
+                            android:layout_marginEnd="@dimen/dimen_50"
+                            android:background="@color/white" />
+
+                    </LinearLayout>
+                </LinearLayout>
+
+
+                 <LinearLayout
+                    android:id="@+id/llFreezeMySubscription"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="@dimen/dimen_20"
+                        android:layout_height="@dimen/dimen_20"
+                        android:layout_gravity="center_vertical"
+                        android:src="@drawable/freeze" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:orientation="vertical"
+                        android:paddingStart="10dp"
+                        android:paddingTop="10dp">
+
+                        <TextView
+                            android:layout_gravity="start"
+                            android:fontFamily="@font/avenir_light"
+                            android:text="@string/freeze_my_subscription"
+                            android:textAlignment="viewStart"
+                            style="@style/MenuText"/>
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="0.5dp"
+                            android:layout_marginTop="15dp"
+                            android:layout_marginEnd="@dimen/dimen_50"
+                            android:background="@color/white" />
+
+                    </LinearLayout>
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:id="@+id/llJoiningDateHistory"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="@dimen/dimen_20"
+                        android:layout_height="@dimen/dimen_20"
+                        android:layout_gravity="center_vertical"
+                        android:src="@drawable/joining_date" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:orientation="vertical"
+                        android:paddingStart="10dp"
+                        android:paddingTop="10dp">
+
+                        <TextView
+                            android:layout_gravity="start"
+                            android:fontFamily="@font/avenir_light"
+                            android:text="@string/joining_date_history"
+                            android:textAlignment="viewStart"
+                            style="@style/MenuText"/>
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="0.5dp"
+                            android:layout_marginTop="15dp"
+                            android:layout_marginEnd="@dimen/dimen_50"
+                            android:background="@color/white" />
+
+                    </LinearLayout>
+                </LinearLayout>
+
+                <LinearLayout
                     android:id="@+id/llChangeDietPlan"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
